// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompareCardContainer should match the snapshot with cards 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    comparedObject={
        Object {
            "comparedObject": Object {
              "ACADEMY 20": 0.407,
              "ADAMS COUNTY 14": 0.709,
              "compared": 1.742,
            },
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Unknown
        comparison={undefined}
        locationA="comparedObject"
        locationAvgA={
                Object {
                        "ACADEMY 20": 0.407,
                        "ADAMS COUNTY 14": 0.709,
                        "compared": 1.742,
                      }
        }
        locationAvgB={undefined}
        locationB={undefined}
/>,
      "className": "compareCardContainer",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "comparison": undefined,
        "locationA": "comparedObject",
        "locationAvgA": Object {
          "ACADEMY 20": 0.407,
          "ADAMS COUNTY 14": 0.709,
          "compared": 1.742,
        },
        "locationAvgB": undefined,
        "locationB": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Unknown
          comparison={undefined}
          locationA="comparedObject"
          locationAvgA={
                    Object {
                              "ACADEMY 20": 0.407,
                              "ADAMS COUNTY 14": 0.709,
                              "compared": 1.742,
                            }
          }
          locationAvgB={undefined}
          locationB={undefined}
/>,
        "className": "compareCardContainer",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "comparison": undefined,
          "locationA": "comparedObject",
          "locationAvgA": Object {
            "ACADEMY 20": 0.407,
            "ADAMS COUNTY 14": 0.709,
            "compared": 1.742,
          },
          "locationAvgB": undefined,
          "locationB": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CompareCardContainer should match the snapshot with no cards 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    comparedObject={
        Object {
            "comparedObject": Object {},
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Unknown
        comparison={undefined}
        locationA="comparedObject"
        locationAvgA={Object {}}
        locationAvgB={undefined}
        locationB={undefined}
/>,
      "className": "compareCardContainer",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "comparison": undefined,
        "locationA": "comparedObject",
        "locationAvgA": Object {},
        "locationAvgB": undefined,
        "locationB": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Unknown
          comparison={undefined}
          locationA="comparedObject"
          locationAvgA={Object {}}
          locationAvgB={undefined}
          locationB={undefined}
/>,
        "className": "compareCardContainer",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "comparison": undefined,
          "locationA": "comparedObject",
          "locationAvgA": Object {},
          "locationAvgB": undefined,
          "locationB": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
